# enigma_hack_2026

./: README.md
src/: .env  docker-compose.yml
src/backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 68456b1097a5_add_response_field_to_tickets.py  7024fa15fcac_add_role_column_to_users.py  b231daf27ff1_add_tickets_table.py
src/backend/app/: main.py
src/backend/app/api/: deps.py
src/backend/app/api/routes/: auth.py  tickets.py  users.py
src/backend/app/core/: config.py  enums.py  security.py
src/backend/app/db/: session.py
src/backend/app/models/: ticket.py  user.py
src/backend/app/repositories/: ticket.py  user.py
src/backend/app/schemas/: ticket.py  user.py
src/backend/app/services/: auth.py  ticket.py  user.py
src/frontend/ai-support-front/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
src/frontend/ai-support-front/app/: layout.tsx  page.tsx
src/frontend/ai-support-front/components/: Modal.tsx  TicketForm.tsx  TicketTable.tsx
src/frontend/ai-support-front/lib/: api.ts
src/frontend/ai-support-front/styles/: globals.css
src/frontend/ai-support-front/types/: index.ts
